# ipt_survey

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: example.json  gen_image_example.py  posting_bot_cfg_example.json  teacher_info_example.json
scripts/: aggregate_responses.py  cli_helpers.py  enum_helper.py  gather_links_to_previous_surveys.py  gather_responses.py  generate_forms.py  generate_vizualizations.py  num_responses_filter.py  print_form_urls.py  print_stats.py  stop_accepting_responses.py
src/: bar_plot.py  forms.py  radar_plot.py  survey_image.py  teachers_db.py  utils.py
src/analysis/: aggregators.py  filters.py  parsers.py
src/bot/: bot.py  bot_cfg_example.json  helper_bot.py  posting_bot.py
src/forms/: filtering.py  generation.py  publishing.py  responses.py  services.py
src/viz/: bar_plot.py  radar_plot.py  survey_image.py  utils.py
