[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ipt_survey_viz"
version = "2025.0.1"
authors = [
    {name = "Oleh Shkalikov", email = "Shkalikov.Oleh@gmail.com"},
]
description = "Vizualization of the survey results"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"crag.prompt_templates" = ["*.txt"]

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[project.urls]
Repository = "https://github.com/ShkalikovOleh/ipt_survey_viz"

[tool.isort]
profile = "black"