[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ipt_survey"
version = "2025.0.2"
authors = [
    {name = "Oleh Shkalikov", email = "Shkalikov.Oleh@gmail.com"},
]
description = "Automation of the IPT survey"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"
